--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -199,22 +199,15 @@ jobs:
                 console.warn("No KU card found.");
               }
 
-              // Stage 11: Reader section – click current page
-              console.log("Waiting for Reader pages container…");
-              await page.waitForSelector('.section-container .pages-container', { visible: true, timeout: 60000 });
+              // Stage 11: Wait for and click current page in Reader
+              console.log("Waiting for Reader section to load…");
+              await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
 
               console.log("Clicking current page in Reader…");
-              const clickedReader = await page.evaluate(() => {
-                const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
-                if (curr) { curr.click(); return true; }
-                return false;
-              });
-              if (!clickedReader) {
-                console.error("ERROR: Could not click current page in Reader");
-              } else {
-                await safeScreenshot(page, `screenshots/pubby_reader_book_clicked_${Date.now()}.png`);
-              }
+              await page.click('.section-container .pages-container .page-label.current-page');
+              await sleep(2000);
+              await safeScreenshot(page, `screenshots/pubby_reader_book_clicked_${Date.now()}.png`);
 
               // Stage 12: Click 'View On Amazon'
               console.log("Clicking 'View On Amazon'…");
