--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -56,16 +56,16 @@ jobs:
               });
               page = await browser.newPage();
 
-              // Stage 1: Login
+              // Stage 1: Navigate to login page
               console.log("Navigating to login page:", loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_home_${Date.now()}.png`);
 
+              // Stage 2: Fill and submit login form
               console.log("Filling in login credentials...");
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
               await safeScreenshot(page, `screenshots/pubby_credentials_filled_${Date.now()}.png`);
-
               console.log("Submitting login form...");
               await Promise.all([
                 page.click('button[type="submit"]'),
@@ -73,7 +73,7 @@ jobs:
               ]);
               await safeScreenshot(page, `screenshots/pubby_after_login_${Date.now()}.png`);
 
-              // Stage 2: Verify login
+              // Stage 3: Verify login
               console.log("Verifying login status...");
               const dash = await page.$('a.logout, .dashboard');
               if (!dash) {
@@ -81,13 +81,13 @@ jobs:
                 await safeScreenshot(page, `screenshots/pubby_login_failed_${Date.now()}.png`);
               }
 
-              // Stage 3: Browse page
+              // Stage 4: Navigate to browse page
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
               await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
 
-              // Stage 4: Click Kindle Unlimited
+              // Stage 5: Click Kindle Unlimited filter
               console.log("Clicking 'Kindle Unlimited' filter…");
               const kuClicked = await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
@@ -99,7 +99,7 @@ jobs:
               await sleep(5000);
               await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
 
-              // Stage 5: Click Most Snaps
+              // Stage 6: Click Most Snaps filter
               console.log("Clicking 'Most Snaps' filter…");
               const snapsClicked = await page.evaluate(() => {
                 const tag = Array.from(document.querySelectorAll('.browsing-tag'))
@@ -111,13 +111,13 @@ jobs:
               await sleep(5000);
               await safeScreenshot(page, `screenshots/pubby_most_snaps_${Date.now()}.png`);
 
-              // Stage 6: Wait for book list
+              // Stage 7: Wait for books container
               console.log("Waiting for books container…");
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
               await sleep(5000);
 
-              // Stage 7: Scroll to load more
+              // Stage 8: Scroll to load more books
               for (let i = 0; i < 3; i++) {
                 console.log(`Scrolling iteration ${i+1}`);
                 await page.evaluate(() => window.scrollBy(0, window.innerHeight));
@@ -125,7 +125,7 @@ jobs:
                 await safeScreenshot(page, `screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
               }
 
-              // Stage 8: Extract recommended titles
+              // Stage 9: Extract recommended book titles
               console.log("Extracting Recommended Books…");
               const recommended = await page.evaluate(() =>
                 Array.from(document.querySelectorAll('.library-books-container .card .title-text'))
@@ -134,7 +134,7 @@ jobs:
               console.log("Recommended Books:", recommended);
               await safeScreenshot(page, `screenshots/pubby_books_extracted_${Date.now()}.png`);
 
-              // Stage 9: Extract timeline
+              // Stage 10: Extract activity timeline
               console.log("Extracting Activity Timeline…");
               const timeline = await page.evaluate(() =>
                 Array.from(document.querySelectorAll('.timeline .event'))
@@ -146,7 +146,7 @@ jobs:
               console.log("Activity Timeline:", timeline);
               await safeScreenshot(page, `screenshots/pubby_activity_extracted_${Date.now()}.png`);
 
-              // Stage 10: Pick a Kindle Unlimited book
+              // Stage 11: Pick a Kindle Unlimited book
               console.log("Scanning for Kindle Unlimited cards…");
               const kuHandle = await page.evaluateHandle(xpath => {
                 const arr = [];
@@ -199,17 +199,34 @@ jobs:
                 console.warn("No KU card found.");
               }
 
-              // Stage 11: Wait for and click current page in Reader
-              console.log("Waiting for Reader section to load…");
-              await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
+              // Stage 12: Activate Reader and click current page
+              console.log("Activating 'Reader' section…");
+              await page.evaluate(() => {
+                const readerLabel = Array.from(document.querySelectorAll('.section-container .section-label'))
+                  .find(el => el.innerText.trim() === 'Reader');
+                if (readerLabel) readerLabel.click();
+              });
+              await page.waitForFunction(() => {
+                const sec = Array.from(document.querySelectorAll('.section-container'))
+                  .find(s => s.querySelector('.section-label')?.innerText.trim() === 'Reader');
+                return !!sec?.querySelector('.pages-container .page-label.current-page');
+              }, { timeout: 60000 });
               await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
-
               console.log("Clicking current page in Reader…");
-              await page.click('.section-container .pages-container .page-label.current-page');
-              await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_reader_book_clicked_${Date.now()}.png`);
+              const clickedReader = await page.evaluate(() => {
+                const sec = Array.from(document.querySelectorAll('.section-container'))
+                  .find(s => s.querySelector('.section-label')?.innerText.trim() === 'Reader');
+                const curr = sec?.querySelector('.pages-container .page-label.current-page');
+                if (curr) { curr.click(); return true; }
+                return false;
+              });
+              if (!clickedReader) {
+                console.error("ERROR: Could not click Reader current-page");
+              } else {
+                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
+              }
 
-              // Stage 12: Click 'View On Amazon'
+              // Stage 13: Click 'View On Amazon'
               console.log("Clicking 'View On Amazon'…");
               const clickedViewAmazon = await page.evaluate(() => {
                 const btn = document.querySelector('.action.copy-amazon-link');
@@ -217,7 +234,7 @@ jobs:
                 return false;
               });
               if (!clickedViewAmazon) {
-                console.error("ERROR: Could not click 'View On Amazon'");
+                console.error("ERROR: 'View On Amazon' not found");
               } else {
                 await safeScreenshot(page, `screenshots/pubby_view_amazon_${Date.now()}.png`);
               }
@@ -227,7 +244,6 @@ jobs:
             } finally {
               if (page) {
                 try {
-                  console.log("Saving final HTML…");
                   fs.writeFileSync(
                     `screenshots/pubby_final_page_${Date.now()}.html`,
                     await page.content()
